k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rentdrive-service
  namespace: rentdrive
  labels:
    app: rentdrive
    tier: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: rentdrive
    tier: frontend
